--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -117,6 +117,7 @@ ul {
 	&:hover, &:focus {
 		background: darken($green, 20%);
 		color: $medium-brown;
+		cursor: pointer;
 	}
 }
 
@@ -146,6 +147,14 @@ ul {
 		margin-top: 45px;
 		text-align: center;
 		text-transform: uppercase;
+		.nav-link {
+			cursor: pointer;
+			&:hover,
+			&:focus {
+				color: $green;
+				text-decoration: none;
+			}
+		}
 	}
 	.social-icons {
 		position: absolute;
@@ -475,6 +484,7 @@ footer {
 				img {
 					height: auto;
 					width: 60%;
+					max-width: 250px;
 					margin: 0 auto;
 				}
 			}
@@ -482,8 +492,8 @@ footer {
 	}
 	.about-slide {
 		.profile-image-wrapper {
-			padding-top: 35px;
-			padding-bottom: 35px;
+			padding-top: 50px;
+			padding-bottom: 50px;
 			.profile-image {
 				width: 250px;
 				height: 250px;
@@ -510,9 +520,13 @@ footer {
 
 }
 
-// Extra large devices (large desktops, 1200px and up)
-@media (min-width: 1200px) {
-
+// Extra large devices (large desktops, 1600px and up)
+@media (min-width: 1600px) {
+	.projects-slide {
+		.project {
+			height: 240px;
+		}
+	}
 }
 
 @import 'animations';
